# localllmsimulation

./: .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt  test_accuracy.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: dependencies.py  routes.py  schemas.py
backend/src/db/: connection.py  models.py  ocr_models.py  ocr_queries.py  queries.py  seed.py
backend/src/predictor/: __init__.py  experiment.py  model.py  train.py
backend/src/services/: ocr_simulation.py  search.py  simulation.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ConfidenceExplainer.jsx  SourcesModal.jsx
frontend/src/hooks/: useHardwareSearch.js  useOcrSimulation.js  useSimulation.js  useTokenAnimation.js
frontend/src/styles/: variables.css
