[project]
name = "llm-perf-sim"
version = "0.1.0"
description = "LLM Performance Simulator API"
authors = [
    {name = "Francesco Menegoni", email = "info@htx.it"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
